# recoilly

./: README.md  biome.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs  overlay.rs  recoil.rs  screenshot.rs  spray_pattern.rs
src/assets/: base.css
src/components/: OverlayMode.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
src/features/overlay/: Lens.tsx  OverlayCanvas.tsx  OverlayControls.tsx  PatternDiff.tsx  SavePatternModal.tsx
src/features/visualization/: SprayMinimap.tsx  SprayPattern.tsx
src/hooks/: useStoreSync.ts
src/pages/: About.tsx  App.tsx  Home.tsx  Library.tsx  Overlay.tsx  Settings.tsx
src/services/: ipcService.ts
src/stores/: settingsStore.ts
src/stores/middlewares/: tauriFileSystemStorage.ts
src/types/: vec.ts
